Add missing No SD Card translation
Revert add chinese chars in FW

--- a/languagePacks/ui_fr.lng
+++ b/languagePacks/ui_fr.lng
@@ -53,6 +53,7 @@ l_49=Emplacement de la mesure : %s
 l_50=Démarrer les mesures
 l_51=Inverser l'axe %s
 l_52=Langue
+l_53=Pas de SD card
 
 [info]
 creator=luc@tech-hunter.com
